# gh-cli-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: basic_usage.rs  pr.rs  pull_requests.rs  repo.rs
src/: client.rs  command.rs  error.rs  executor.rs  lib.rs
src/commands/: issue.rs  mod.rs  pr.rs  repo.rs
