[package]
name = "gh-cli-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
authors = ["Vinh Tran <vinht1211@gmail.com>"]
description = "A Rust wrapper for GitHub CLI with a type-safe, fluent API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daivinhtran/gh-cli-rs"
homepage = "https://github.com/daivinhtran/gh-cli-rs"
documentation = "https://docs.rs/gh-cli-rs"
readme = "README.md"
keywords = ["github", "cli", "gh", "wrapper", "sdk"]
categories = ["command-line-utilities", "api-bindings", "development-tools"]

[dependencies]
thiserror = "2.0"
